@@ -7,6 +7,7 @@ version 0.76cvs:
 	  accessibility tools (Marc Mulcahy)
 	* Improved accessibility in conversation windows (Nathan Fredrickson)
 	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
+        * Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
 	* TCL Plugin API changed
 	* Tabs now stay green when they are supposed to (Etan Reisner)
 	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
